[package]
name = "acuity-atomic-swap-offchain"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", branch = "aj-deps" }
proc-macro = { git = "https://github.com/paritytech/substrate-subxt", branch = "aj-deps", package = "substrate-subxt-proc-macro"}
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
web3 = "0.16.0"
rocksdb = "0.17.0"
tokio-tungstenite = "*"
tokio = { version = "1.0", features = ["full"] }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "master" }
