[package]
name = "acuity-atomic-swap-offchain"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", branch = "giles-snow-prost" }
proc-macro = { git = "https://github.com/paritytech/substrate-subxt", branch = "giles-snow-prost", package = "substrate-subxt-proc-macro"}
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
web3 = "0.17.0"
rocksdb = "0.17.0"
tokio-tungstenite = "*"
tokio = { version = "1.0", features = ["full"] }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-io = { package = "sp-io", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
