[package]
name = "acuity-atomic-swap-offchain"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate-subxt = { git = "https://github.com/acuity-social/subxt", branch = "upgrade-0.9.12" }
proc-macro = { git = "https://github.com/acuity-social/subxt", branch = "upgrade-0.9.12", package = "substrate-subxt-proc-macro"}
codec = { package = "parity-scale-codec", version = "2.3.1", features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
web3 = "0.17.0"
rocksdb = "0.17.0"
tokio-tungstenite = "*"
tokio = { version = "1.0", features = ["full"] }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = { package = "sp-io", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
